# AIDeepLearningProblem

./: CMakeLists.txt  README.md  auto.cpp  main.cpp  run.cpp  run_linux.cpp  stb.cpp  test.cpp  train.cpp  train_adam.cpp
models/: README.md
models/Leaky_ReLU_Softmax/: desc.txt  error_images_indexes.txt  metrics.txt
models/sigmoid_sigmoid/: desc.txt  error_images_indexes.txt  metrics.txt
models/sigmoid_softmax/: desc.txt  error_images_indexes.txt  metrics.txt
src/: run.cpp  run_windows.cpp
